lab1/Test/L1-A-7-17.cmm
struct ZR0GUt4 w ( ) {
  int R5DMkD ;
  struct {
  }BI_Xz_x ;
  int wRcY2bLDn0x5x3GiKZcC ;
  int qstfmJDNdQQbzKcyJ9Zg ;
`{
    int xrKa82DH4 ;
    struct aW0 ht571SgS_3mUsmLGhFK ;
    float xvNtDdxh8aoS7h = TQiW85oCYPtWAnkUZ1K7 , 
      ugVCaLBqMhAANVGhyo [ 1397734674 ] ;
    if ( i1Z9VyIZh )     if ( e8APGyMS ) {
    }else     jElvkjgmbAnwW1zB ;

else     if ( NvzFyGC2YARR6kZFtf )     while ( XFl_E7eDl 
      )     return ObRcX4gNRJADpfA = QnswMXsXQY && OzWO2 
      > sz + j3Zlkjhot4JJROmg * k [ Q1Wd67V9I || kD7hlh4h0XLanXa 
      == qfVcV - ( FS_ < RafeX1FWhte / T_pYvw ( ZzlodQ5hn0vNX5jhV 
      ( rLJv1k0f71GjGT_I9i , t0YvnIVFmq9i3BRoz && cPWTSaIc0GOKq 
      != ! XT3hemC2hseYvgZ0M [ iL <= nE6oayeH - e3o_8ev 
      / m5kYVgF0F ( NU5mH0h8N || q4cXMAuA >= L_wk7k8g_TK 
      ) ] ) = - 530067377 - ! aBDkCH4lcMbywmNxe52 / 1794549142.497749629 
      ) ) / ! - gFw ( ) . V85n ^] ;



  }}
int ZtJn0VGQDSJ2cLXc ( int UN9 , int ZMxp_scmFmFkA7orq6q 
  ) {
}
int blbkLZHA_khAlW6xP , yTSbmrHQcpD4AJm 

;
struct ZIGXSY2lispuIEeH53R {
};
&